# LSP-batch

./: AGENTS.md  LICENSE  LSP-batch.sublime-commands  LSP-batch.sublime-settings  Main.sublime-menu  README.md  dependencies.json  plugin.py  pyproject.toml
.github/workflows/: python.yml
language-server/: .gitignore  README.md  compile-language-server.sh  package-lock.json  package.json
