[project]
name = "lsp-batch"
version = "0.0.0"
description = "Windows Batch support for Sublime's LSP plugin provided through RechInformatica/rech-editor-batch."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typing-extensions>=4.12",
]

[dependency-groups]
dev = [
  "mypy>=1.14",
  "ruff>=0.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
# ignore_missing_imports = False
check_untyped_defs = true
strict_optional = true
mypy_path = 'typings:stubs'
python_version = '3.8'

[[tool.mypy.overrides]]
module = [
    "LSP.*",
    "lsp_utils.*",
    "mdpopups.*",
    "sublime_lib.*",
    "typings.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = '3.8'
reportAny = "none"
reportUnusedCallResult = "none"
typeCheckingMode = "standard"

[tool.ruff]
preview = true
line-length = 120
target-version = 'py38'
exclude = [
  "*/libs/*",
  ".git",
  ".mypy_cache",
  ".venv",
  ".venv-*",
  "branch-*",
  "overwrites/extension/dist/typeshed-fallback",
  "stubs",
  "syntaxes",
  "tests/files",
  "typings",
  "vendor",
  "venv",
  "venv-*",
]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "FURB",
  "I",
  "PERF",
  "PIE",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "B903",  # test stubs may not be dataclasses
  "E203",
  "RUF067",  # ST plugins need plugin_loaded/unloaded in __init__.py
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"boot.py" = ["E402"]
